Final version: Fixed review service and controller, project ready for demo